<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sampledata.Mapa">


    <TextView
        android:id="@+id/tvLongitud"
        android:layout_width="301dp"
        android:layout_height="60dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="32dp"
        android:text="@string/longitud"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btUbicacion" />

    <TextView
        android:id="@+id/tvLatitud"
        android:layout_width="255dp"
        android:layout_height="56dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="36dp"
        android:text="@string/latitud"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btUbicacion" />

    <Button
        android:id="@+id/btUbicacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="148dp"
        android:text="@string/ubicacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>