<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".sampledata.Chat">


    <Button
        android:id="@+id/upload_button_id"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/subir"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="410dp"
        android:layout_height="263dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="263dp"
            android:orientation="vertical"
            >


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="24dp"
                android:layout_height="22dp"
                android:src="@drawable/googleg_standard_color_18"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/text_id"
                android:layout_margin="10dp"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/estado_de_la_base_de_datos"
                android:textColor="@color/black"
                android:textSize="17sp"
                app:layout_constraintVertical_bias="0.402"/>
        </LinearLayout>
    </ScrollView>

    <EditText
        android:id="@+id/Conversar"
        android:layout_width="283dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/conversar"
        app:layout_constraintBottom_toTopOf="@+id/upload_button_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:src="@android:drawable/ic_menu_myplaces"
        app:layout_constraintBottom_toTopOf="@+id/upload_button_id"
        app:layout_constraintEnd_toStartOf="@+id/Conversar"
        app:layout_constraintHorizontal_bias="0.938"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/EnviarUbicacion"
        android:layout_width="126dp"
        android:layout_height="83dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="140dp"
        android:text="@string/enviar_ubicacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="361dp"
        android:layout_height="280dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:visibility="invisible"
        android:textColor="@color/white"
        android:text="@string/textview"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EnviarUbicacion" />


</androidx.constraintlayout.widget.ConstraintLayout>